# player_control

./: .gitignore  README.md  __main__.py  player_control.sh  pyproject.toml
control/: control.py
src/player_control/: __main__.py
src/player_control/controllers/: __init__.py  base.py  browser.py  cmus.py  delegating_controller.py  firefox.py  mocp.py  mpris.py  spotify.py
tests/: test_control.py  test_delegating_controller.py
